# lawdify

./: .env  .gitignore  README.md  index_documents.py  lawdify.py  pyproject.toml
frontend/: README.md  package-lock.json
frontend/public/: index.html
frontend/src/: App.js
